# embedded_programming

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CMakeLists.txt~  custom_logger.cpp~  custom_logger.hpp  custom_logger.hpp~  embedded_controller.cpp  embedded_controller.cpp~  embedded_controller.hpp  embedded_controller.hpp~  log.txt  main.cpp  main.cpp~
tst/: CMakeLists.txt  embedded_controller_test.cpp  embedded_controller_test.cpp~
